--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -30,7 +30,7 @@
 
         <section id="portal-search">
             <h:form id="search-form" action="">
-                <p:inputText id="search-field" a:placeholder="#{msgs.searchPlaceholder}"/><button type="submit"><i class="fa fa-search"/></button>
+                <p:inputText id="search-field" a:placeholder="#{msgs.searchPlaceholder}"/><p:inputText id="search-field-short" a:placeholder="#{msgs.search}"/><button type="submit"><i class="fa fa-search"/></button>
             </h:form>
         </section>
 
