Remove not used methods from LoginForm and rename remaining ones

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
@@ -25,7 +25,7 @@
                     <h:outputLabel for="newPassword" value="#{msgs.newPassword}"/>
                     <p:password redisplay="true" id="newPassword"
                                 class="password"
-                                value="#{LoginForm.passwortAendernNeu1}"
+                                value="#{LoginForm.passwordChanged}"
                                 label="#{msgs.newPassword}"
                                 required="true"/>
                 </div>
@@ -35,7 +35,7 @@
                     <h:outputLabel for="newPasswordRepeat" value="#{msgs.confirmNewPassword}"/>
                     <p:password redisplay="true" id="newPasswordRepeat"
                                 class="password"
-                                value="#{LoginForm.passwortAendernNeu2}"
+                                value="#{LoginForm.passwordChangedRepeat}"
                                 label="#{msgs.confirmNewPassword}"
                                 required="true"
                                 match="newPassword"
