--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
@@ -27,9 +27,9 @@
             <p:panelGrid columns="1" layout="grid">
                 <p:row>
                     <div>
-                        <p:outputLabel for="templatePropertyTitle" value="#{msgs.titel}" />
+                        <p:outputLabel for="templatePropertyTitle" value="#{msgs.title}" />
                         <p:inputText id="templatePropertyTitle" value="#{ProzessverwaltungForm.templateProperty.title}"
-                                     placeholder="#{msgs.titel}" required="true" styleClass="input editDialog"/>
+                                     placeholder="#{msgs.title}" required="true" styleClass="input editDialog"/>
                     </div>
                     <div>
                         <p:outputLabel for="templatePropertyValue" value="#{msgs.value}" />
