--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
@@ -29,9 +29,9 @@
                 <p:row>
                     <div>
                         <!-- title -->
-                        <p:outputLabel for="workpiecePropertyTitle" value="#{msgs.titel}" />
+                        <p:outputLabel for="workpiecePropertyTitle" value="#{msgs.title}" />
                         <p:inputText id="workpiecePropertyTitle" value="#{ProzessverwaltungForm.workpieceProperty.title}"
-                                     placeholder="#{msgs.titel}" required="true" styleClass="input editDialog"/>
+                                     placeholder="#{msgs.title}" required="true" styleClass="input editDialog"/>
                     </div>
                     <div>
                         <!-- value: text -->
