--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
@@ -26,8 +26,8 @@
     <p:panelGrid id="editDetailForm" columns="2" cellpadding="10" layout="grid">
         <p:row>
             <div>
-                <p:outputLabel for="title" value="#{msgs.titel}" />
-                <p:inputText id="title" placeholder="#{msgs.titel}" class="input" value="#{ProjekteForm.myProjekt.title}" disabled="#{ProjekteForm.lockedDetail}" required="#{empty param['editForm:saveButtonToggler']}"/>
+                <p:outputLabel for="title" value="#{msgs.title}" />
+                <p:inputText id="title" placeholder="#{msgs.title}" class="input" value="#{ProjekteForm.myProjekt.title}" disabled="#{ProjekteForm.lockedDetail}" required="#{empty param['editForm:saveButtonToggler']}"/>
             </div>
             <div>
                 <p:outputLabel for="pages" value="#{msgs.numberImages}" />
