--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
@@ -18,7 +18,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable var="usergroup" id="usergroupTable"
                  value="#{ProzessverwaltungForm.task.userGroups}">
-        <p:column headerText="#{msgs.titel}">
+        <p:column headerText="#{msgs.title}">
             <h:outputText value="#{usergroup.title}"/>
         </p:column>
         <p:column headerText="#{msgs.delete}">
