Warn user about unsaved changes when leaving edit pages

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/head.xhtml
@@ -25,5 +25,6 @@
     <link rel="shortcut icon" href="#{resource['images/favicon.ico']}" type="image/x-icon" />
 
     <h:outputScript name="menu.js" target="body" library="js"/>
+    <h:outputScript name="form.js" target="body" library="js"/>
 
 </ui:composition>
